1.1.1:
	SMTP AUTH support
	Accept any e-mail address as specified in RFC 2821 from config and dump
	Add a -L flag for subnet matching (ad-hoc hack for MTA farms)
	Use setsid() to detach from the terminal
	Fix the mising units in ps output for -a and -w
	Fix typos

1.0: First stable release